--- a/Hoof/Views/AnnualPlan/Index.cshtml
+++ b/Hoof/Views/AnnualPlan/Index.cshtml
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="~/Content/AnnualPlan/AnnualPlanStyles.css" />
 }
 
-<h2>Index</h2>
+<h2>Roczny plan pozyskania zwierzyny łownej</h2>
 
-<table class="table-bordered annualPlanTable">
+<table class="table-bordered annualPlanTable" id="annualPlanTable">
     <tr>
         <th>@AnnualPlan.Specification</th>
         <th class="unit">@AnnualPlan.Unit</th>
@@ -202,7 +202,7 @@
         <td>@Model.CurrentAnnualPlanModel.CostPlanModels.FirstOrDefault(x => x.Type == (int)CostType.Revenue).Cost</td>
     </tr>
 </table>
-<hr/>
+<hr />
 <table class="table-bordered gameTable" style="text-align: center">
     <tr>
         <th rowspan="3">@AnnualPlan.GameTypes</th>
@@ -951,7 +951,7 @@
         <td></td>
     </tr>
 </table>
-<hr/>
+<hr />
 <table class="table-bordered" style="text-align: center">
     <tr>
         <th rowspan="3">@AnnualPlan.GameTypes</th>
