--- a/Hoof/Views/Hunt/MyHunts.cshtml
+++ b/Hoof/Views/Hunt/MyHunts.cshtml
@@ -1,18 +1,18 @@
 ﻿@model IEnumerable<Domain.Hunt.ViewModels.HuntViewModel>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "MyHunts";
 }
 
-<h2>Polowania</h2>
+<h2>Moje polowania</h2>
 
+<p>
+    @Html.ActionLink("Dodaj", "Create")
+</p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.HuntsmanName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.HuntsmanLastName)
+            @Html.DisplayNameFor(model => model.Date)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.City)
@@ -35,19 +35,13 @@
         <th>
             @Html.DisplayNameFor(model => model.Shots)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Date)
-        </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.HuntsmanName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.HuntsmanLastName)
+            @Html.DisplayFor(modelItem => item.Date)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.City)
@@ -71,13 +65,9 @@
             @Html.DisplayFor(modelItem => item.Shots)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Date)
+            @Html.ActionLink("Edytuj", "Edit", new { /* id=item.PrimaryKey */ }) |
+            @Html.ActionLink("Usuń", "Delete", new { /* id=item.PrimaryKey */ })
         </td>
-        @*<td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-        </td>*@
     </tr>
 }
 
