--- a/Hoof/Views/Report/Index.cshtml
+++ b/Hoof/Views/Report/Index.cshtml
@@ -396,7 +396,7 @@
         <td></td>
     </tr>
     <tr>
-        <td style="font-weight: bold">Szopy pracz</td>
+        <td style="font-weight: bold">Szop pracz</td>
         <td></td>
         <td></td>
         <td></td>
@@ -498,9 +498,3 @@
         <td colspan="1">kg</td>
     </tr>
 </table>
-
-
-
-
-
-
